--- a/public/locales/mk/translation.json
+++ b/public/locales/mk/translation.json
@@ -281,20 +281,32 @@
   "reviews": {
     "title": "Доверба од Илјадници Задоволни Клиенти",
     "subtitle": "Задоволство на Клиентите",
+    "verified": "Верификуван Клиент",
+    "rating": "Оценка",
+    "reviewedOn": "Рецензирано на",
     "review1": {
       "name": "Елира М.",
-      "role": "Сопственичка на Ресторан",
-      "comment": "Како сопственичка на ресторан, издржливоста и дизајнот се еднакво важни. HPL Компактните панели што ги купивме од Doqi Shpk му дадоа на нашиот простор модерен изглед и лесно можат да се справат со секојдневното трошење. Клиентите често го пофалуваат дизајнот — тоа беше вистинската инвестиција за нашиот бизнис."
+      "role": "Сопственичка на Ресторан, Приштина",
+      "comment": "Како сопственичка на ресторан, издржливоста и дизајнот се еднакво важни. HPL Компактните панели што ги купивме од Doqi Shpk му дадоа на нашиот простор модерен изглед и лесно можат да се справат со секојдневното трошење. Клиентите често го пофалуваат дизајнот — тоа беше вистинската инвестиција за нашиот бизнис.",
+      "date": "Ноември 2024"
     },
     "review2": {
       "name": "Петрит Г.",
-      "role": "Дизајнер на Ентериер",
-      "comment": "Работата со Doqi го трансформираше мојот пристап кон комерцијалните проекти. Нивниот широк асортиман на материјали и професионална консултација ми помогнаа да постигнам исклучителни резултати за моите клиенти. Квалитетот зборува сам за себе."
+      "role": "Дизајнер на Ентериер, Призрен",
+      "comment": "Работата со Doqi го трансформираше мојот пристап кон комерцијалните проекти. Нивниот широк асортиман на материјали и професионална консултација ми помогнаа да постигнам исклучителни резултати за моите клиенти. Квалитетот зборува сам за себе.",
+      "date": "Октомври 2024"
     },
     "review3": {
       "name": "Ана К.",
-      "role": "Менаџер на Хотел",
-      "comment": "Го опремивме целиот наш хотел со материјали од Doqi. Комбинацијата на издржливост, стил и конкурентни цени ги направи нашиот преферирач партнер. Нашите гости постојано ја фалат модерната естетика."
+      "role": "Менаџер на Хотел, Пеја",
+      "comment": "Го опремивме целиот наш хотел со материјали од Doqi. Комбинацијата на издржливост, стил и конкурентни цени ги направи нашиот преферирач партнер. Нашите гости постојано ја фалат модерната естетика.",
+      "date": "Септември 2024"
+    },
+    "review4": {
+      "name": "Арбен Д.",
+      "role": "Сопственик на Дом, Ѓаковица",
+      "comment": "Купив StarFlex душек и MDF плочи за реновирање на мојот дом. Квалитетот ги надмина моите очекувања! Тимот беше професионален, испораката навремена, а цените фер. Топло препорачувам!",
+      "date": "Август 2024"
     }
   },
   "starflex": {
