--- a/public/locales/sr/translation.json
+++ b/public/locales/sr/translation.json
@@ -281,20 +281,32 @@
   "reviews": {
     "title": "Поверење Хиљада Задовољних Купаца",
     "subtitle": "Задовољство Купаца",
+    "verified": "Верификовани Купац",
+    "rating": "Оцена",
+    "reviewedOn": "Рецензирано",
     "review1": {
       "name": "Елира М.",
-      "role": "Власница Ресторана",
-      "comment": "Као власница ресторана, издржљивост и дизајн су подједнако важни. HPL Компактни панели које смо купили од Doqi Shpk дали су нашем простору модеран изглед и лако подносе свакодневно трошење. Купци често комплиментирају дизајн — била је то права инвестиција за наш посао."
+      "role": "Власница Ресторана, Приштина",
+      "comment": "Као власница ресторана, издржљивост и дизајн су подједнако важни. HPL Компактни панели које смо купили од Doqi Shpk дали су нашем простору модеран изглед и лако подносе свакодневно трошење. Купци често комплиментирају дизајн — била је то права инвестиција за наш посао.",
+      "date": "Новембар 2024"
     },
     "review2": {
       "name": "Петрит Г.",
-      "role": "Дизајнер Ентеријера",
-      "comment": "Рад са Doqi је трансформисао начин на који приступам комерцијалним пројектима. Њихов широк асортиман материјала и професионално саветовање помогли су ми да постигнем изузетне резултате за моје клијенте. Квалитет говори сам за себе."
+      "role": "Дизајнер Ентеријера, Призрен",
+      "comment": "Рад са Doqi је трансформисао начин на који приступам комерцијалним пројектима. Њихов широк асортиман материјала и професионално саветовање помогли су ми да постигнем изузетне резултате за моје клијенте. Квалитет говори сам за себе.",
+      "date": "Октобар 2024"
     },
     "review3": {
       "name": "Ана К.",
-      "role": "Менаџер Хотела",
-      "comment": "Опремили смо цео наш хотел материјалима од Doqi. Комбинација издржљивости, стила и конкурентних цена учинила их је нашим преферираним партнером. Наши гости стално хвале модерну естетику."
+      "role": "Менаџер Хотела, Пећ",
+      "comment": "Опремили смо цео наш хотел материјалима од Doqi. Комбинација издржљивости, стила и конкурентних цена учинила их је нашим преферираним партнером. Наши гости стално хвале модерну естетику.",
+      "date": "Септембар 2024"
+    },
+    "review4": {
+      "name": "Арбен Д.",
+      "role": "Власник Куће, Ђаковица",
+      "comment": "Купио сам StarFlex душек и MDF плоче за реновирање моје куће. Квалитет је премашио моја очекивања! Тим је био професионалан, достава на време, а цене поштене. Топло препоручујем!",
+      "date": "Август 2024"
     }
   },
   "starflex": {
