--- a/public/locales/al/translation.json
+++ b/public/locales/al/translation.json
@@ -292,20 +292,32 @@
   "reviews": {
     "title": "Besuar nga Mijëra Klientë të Kënaqur",
     "subtitle": "Kënaqësia e Klientit",
+    "verified": "Klient i Verifikuar",
+    "rating": "Vlerësimi",
+    "reviewedOn": "Shqyrtuar më",
     "review1": {
-      "name": "Elira M.",
-      "role": "Pronare Restoranti",
-      "comment": "Si pronare e restorantit, qëndrueshmëria dhe dizajni janë po aq të rëndësishëm. Panelet HPL Kompakte që blemë nga Doqi Shpk i dhanë hapësirës sonë një pamje moderne dhe mund të përballojnë lehtësisht konsumimin dhe grisjen e përditshme. Klientët shpesh komplimentojnë dizajnin — ishte investimi i duhur për biznesin tonë."
+      "name": "Flutura S.",
+      "role": "Pronare Restoranti, Prishtinë",
+      "comment": "Si pronare e restorantit, qëndrueshmëria dhe dizajni janë po aq të rëndësishëm. Panelet HPL Kompakte që blemë nga Doqi Shpk i dhanë hapësirës sonë një pamje moderne dhe mund të përballojnë lehtësisht konsumimin dhe grisjen e përditshme. Klientët shpesh komplimentojnë dizajnin — ishte investimi i duhur për biznesin tonë.",
+      "date": "Nëntor 2024"
     },
     "review2": {
-      "name": "Petrit G.",
-      "role": "Dizajner Interiori",
-      "comment": "Puna me Doqi ka transformuar mënyrën se si i qasem projekteve komerciale. Gama e tyre e gjerë e materialeve dhe konsulenca profesionale më ndihmoi të ofroj rezultate të jashtëzakonshme për klientët e mi. Cilësia flet vetë."
+      "name": "Burim L.",
+      "role": "Dizajner Interiori, Prizren",
+      "comment": "Puna me Doqi ka transformuar mënyrën se si i qasem projekteve komerciale. Gama e tyre e gjerë e materialeve dhe konsulenca profesionale më ndihmoi të ofroj rezultate të jashtëzakonshme për klientët e mi. Cilësia flet vetë.",
+      "date": "Tetor 2024"
     },
     "review3": {
-      "name": "Ana K.",
-      "role": "Menaxhere Hoteli",
-      "comment": "Ne mobiliuam tërë hotelin tonë me materiale nga Doqi. Kombinimi i qëndrueshmërisë, stilit dhe çmimeve konkurruese i bëri ata partnerin tonë të preferuar. Mysafirët tanë vazhdimisht lavdërojnë estetikën moderne."
+      "name": "Drita B.",
+      "role": "Menaxhere Hoteli, Pejë",
+      "comment": "Ne mobiliuam tërë hotelin tonë me materiale nga Doqi. Kombinimi i qëndrueshmërisë, stilit dhe çmimeve konkurruese i bëri ata partnerin tonë të preferuar. Mysafirët tanë vazhdimisht lavdërojnë estetikën moderne.",
+      "date": "Shtator 2024"
+    },
+    "review4": {
+      "name": "Faton H.",
+      "role": "Pronar Shtëpie, Gjakovë",
+      "comment": "Bleva një dyshek StarFlex dhe dërrasa MDF për rinovimin e shtëpisë sime. Cilësia tejkaloi pritjet e mia! Ekipi ishte profesional, dërgesa në kohë, dhe çmimet ishin të arsyeshme. E rekomandoj shumë!",
+      "date": "Gusht 2024"
     }
   },
   "starflex": {
