--- a/public/locales/bs/translation.json
+++ b/public/locales/bs/translation.json
@@ -281,20 +281,32 @@
   "reviews": {
     "title": "Povjerenje Hiljada Zadovoljnih Kupaca",
     "subtitle": "Zadovoljstvo Kupaca",
+    "verified": "Verifikovani Kupac",
+    "rating": "Ocjena",
+    "reviewedOn": "Recenzirano",
     "review1": {
       "name": "Elira M.",
-      "role": "Vlasnica Restorana",
-      "comment": "Kao vlasnica restorana, izdržljivost i dizajn su podjednako važni. HPL Compact paneli koje smo kupili od Doqi Shpk dali su našem prostoru moderan izgled i lako podnose svakodnevno trošenje. Kupci često komplimentiraju dizajn — bila je to prava investicija za naš posao."
+      "role": "Vlasnica Restorana, Priština",
+      "comment": "Kao vlasnica restorana, izdržljivost i dizajn su podjednako važni. HPL Compact paneli koje smo kupili od Doqi Shpk dali su našem prostoru moderan izgled i lako podnose svakodnevno trošenje. Kupci često komplimentiraju dizajn — bila je to prava investicija za naš posao.",
+      "date": "Novembar 2024"
     },
     "review2": {
       "name": "Petrit G.",
-      "role": "Dizajner Enterijera",
-      "comment": "Rad sa Doqi je transformisao način na koji pristupam komercijalnim projektima. Njihov širok asortiman materijala i profesionalno savjetovanje pomogli su mi da postignem izuzetne rezultate za moje klijente. Kvalitet govori sam za sebe."
+      "role": "Dizajner Enterijera, Prizren",
+      "comment": "Rad sa Doqi je transformisao način na koji pristupam komercijalnim projektima. Njihov širok asortiman materijala i profesionalno savjetovanje pomogli su mi da postignem izuzetne rezultate za moje klijente. Kvalitet govori sam za sebe.",
+      "date": "Oktobar 2024"
     },
     "review3": {
       "name": "Ana K.",
-      "role": "Menadžer Hotela",
-      "comment": "Opremili smo cijeli naš hotel materijalima od Doqi. Kombinacija izdržljivosti, stila i konkurentnih cijena učinila ih je našim preferiranim partnerom. Naši gosti stalno hvale modernu estetiku."
+      "role": "Menadžer Hotela, Peja",
+      "comment": "Opremili smo cijeli naš hotel materijalima od Doqi. Kombinacija izdržljivosti, stila i konkurentnih cijena učinila ih je našim preferiranim partnerom. Naši gosti stalno hvale modernu estetiku.",
+      "date": "Septembar 2024"
+    },
+    "review4": {
+      "name": "Arben D.",
+      "role": "Vlasnik Kuće, Đakovica",
+      "comment": "Kupio sam StarFlex dušek i MDF ploče za renoviranje moje kuće. Kvalitet je premašio moja očekivanja! Tim je bio profesionalan, dostava na vrijeme, a cijene poštene. Toplo preporučujem!",
+      "date": "Avgust 2024"
     }
   },
   "starflex": {
