--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -278,20 +278,32 @@
   "reviews": {
     "title": "Trusted by Thousands of Happy Customers",
     "subtitle": "Customer Satisfaction",
+    "verified": "Verified Customer",
+    "rating": "Rating",
+    "reviewedOn": "Reviewed on",
     "review1": {
-      "name": "Elira M.",
-      "role": "Restaurant Owner",
-      "comment": "As a restaurant owner, durability and design are equally important. The HPL Compact panels we purchased from Doqi Shpk gave our space a modern look and can easily handle daily wear and tear. Customers often compliment the design — it was the right investment for our business."
+      "name": "Flutura S.",
+      "role": "Restaurant Owner, Pristina",
+      "comment": "As a restaurant owner, durability and design are equally important. The HPL Compact panels we purchased from Doqi Shpk gave our space a modern look and can easily handle daily wear and tear. Customers often compliment the design — it was the right investment for our business.",
+      "date": "November 2024"
     },
     "review2": {
-      "name": "Petrit G.",
-      "role": "Interior Designer",
-      "comment": "Working with Doqi has transformed how I approach commercial projects. Their extensive range of materials and professional consultation helped me deliver exceptional results to my clients. The quality speaks for itself."
+      "name": "Burim L.",
+      "role": "Interior Designer, Prizren",
+      "comment": "Working with Doqi has transformed how I approach commercial projects. Their extensive range of materials and professional consultation helped me deliver exceptional results to my clients. The quality speaks for itself.",
+      "date": "October 2024"
     },
     "review3": {
-      "name": "Ana K.",
-      "role": "Hotel Manager",
-      "comment": "We furnished our entire hotel with materials from Doqi. The combination of durability, style, and competitive pricing made them our preferred partner. Our guests consistently praise the modern aesthetic."
+      "name": "Drita B.",
+      "role": "Hotel Manager, Peja",
+      "comment": "We furnished our entire hotel with materials from Doqi. The combination of durability, style, and competitive pricing made them our preferred partner. Our guests consistently praise the modern aesthetic.",
+      "date": "September 2024"
+    },
+    "review4": {
+      "name": "Faton H.",
+      "role": "Homeowner, Gjakova",
+      "comment": "I purchased a StarFlex mattress and MDF boards for my home renovation. The quality exceeded my expectations! The team was professional, delivery was on time, and the prices were fair. Highly recommend!",
+      "date": "August 2024"
     }
   },
   "starflex": {
