--- a/public/locales/hr/translation.json
+++ b/public/locales/hr/translation.json
@@ -281,20 +281,32 @@
   "reviews": {
     "title": "Povjerenje Tisuća Zadovoljnih Kupaca",
     "subtitle": "Zadovoljstvo Kupaca",
+    "verified": "Verificirani Kupac",
+    "rating": "Ocjena",
+    "reviewedOn": "Recenzirano",
     "review1": {
       "name": "Elira M.",
-      "role": "Vlasnica Restorana",
-      "comment": "Kao vlasnica restorana, izdržljivost i dizajn su jednako važni. HPL Compact paneli koje smo kupili od Doqi Shpk dali su našem prostoru moderan izgled i lako podnose svakodnevno trošenje. Kupci često komplimentiraju dizajn — bila je to prava investicija za naš posao."
+      "role": "Vlasnica Restorana, Priština",
+      "comment": "Kao vlasnica restorana, izdržljivost i dizajn su jednako važni. HPL Compact paneli koje smo kupili od Doqi Shpk dali su našem prostoru moderan izgled i lako podnose svakodnevno trošenje. Kupci često komplimentiraju dizajn — bila je to prava investicija za naš posao.",
+      "date": "Studeni 2024"
     },
     "review2": {
       "name": "Petrit G.",
-      "role": "Dizajner Interijera",
-      "comment": "Rad s Doqi transformirao je način na koji pristupam komercijalnim projektima. Njihov široki asortiman materijala i profesionalno savjetovanje pomogli su mi postići izvanredne rezultate za moje klijente. Kvaliteta govori sama za sebe."
+      "role": "Dizajner Interijera, Prizren",
+      "comment": "Rad s Doqi transformirao je način na koji pristupam komercijalnim projektima. Njihov široki asortiman materijala i profesionalno savjetovanje pomogli su mi postići izvanredne rezultate za moje klijente. Kvaliteta govori sama za sebe.",
+      "date": "Listopad 2024"
     },
     "review3": {
       "name": "Ana K.",
-      "role": "Menadžer Hotela",
-      "comment": "Opremili smo cijeli naš hotel materijalima iz Doqi. Kombinacija izdržljivosti, stila i konkurentnih cijena učinila ih je našim preferiranim partnerom. Naši gosti stalno hvale modernu estetiku."
+      "role": "Menadžer Hotela, Peja",
+      "comment": "Opremili smo cijeli naš hotel materijalima iz Doqi. Kombinacija izdržljivosti, stila i konkurentnih cijena učinila ih je našim preferiranim partnerom. Naši gosti stalno hvale modernu estetiku.",
+      "date": "Rujan 2024"
+    },
+    "review4": {
+      "name": "Arben D.",
+      "role": "Vlasnik Kuće, Đakovica",
+      "comment": "Kupio sam StarFlex madrac i MDF ploče za renoviranje svoje kuće. Kvaliteta je premašila moja očekivanja! Tim je bio profesionalan, dostava na vrijeme, a cijene poštene. Toplo preporučujem!",
+      "date": "Kolovoz 2024"
     }
   },
   "starflex": {
