--- a/public/locales/mk/translation.json
+++ b/public/locales/mk/translation.json
@@ -176,7 +176,7 @@
     "quickLinks": "Брзи Врски",
     "products": "Наши Производи",
     "contact": "Контактирајте Не",
-    "address": "Приштина, Косово",
+    "address": "Ферізај, Косово",
     "workingHours": "Пон - Пет: 8:00 - 17:00",
     "saturday": "Саб: 9:00 - 14:00",
     "followUs": "Следете Не",
@@ -310,7 +310,8 @@
     }
   },
   "starflex": {
-    "badge": "Премиум Колекција Душеци",
+    "badge": "Премиум Колекција на Душеци",
+    "mattressProducer": "Производител на Душеци",
     "hero": {
       "subtitle": "Спијте во Врвна Удобност",
       "description": "Доживејте совршена комбинација на удобност, поддршка и квалитет. Нашите премиум душеци се дизајнирани да ви дадат најдобар сон во вашиот живот.",
