--- a/public/locales/sr/translation.json
+++ b/public/locales/sr/translation.json
@@ -176,7 +176,7 @@
     "quickLinks": "Брзе Везе",
     "products": "Наши Производи",
     "contact": "Контактирајте Нас",
-    "address": "Приштина, Косово",
+    "address": "Ферізај, Косово",
     "workingHours": "Пон - Пет: 8:00 - 17:00",
     "saturday": "Суб: 9:00 - 14:00",
     "followUs": "Пратите Нас",
@@ -311,6 +311,7 @@
   },
   "starflex": {
     "badge": "Премијум Колекција Душека",
+    "mattressProducer": "Произвођач Душека",
     "hero": {
       "subtitle": "Спавајте у Врхунској Удобности",
       "description": "Доживите савршену комбинацију удобности, подршке и квалитета. Наши премијум душеци дизајнирани су да вам пруже најбољи сан у вашем животу.",
