--- a/public/locales/bs/translation.json
+++ b/public/locales/bs/translation.json
@@ -176,7 +176,7 @@
     "quickLinks": "Brze Veze",
     "products": "Naši Proizvodi",
     "contact": "Kontaktirajte Nas",
-    "address": "Priština, Kosovo",
+    "address": "Ferizaj, Kosovo",
     "workingHours": "Pon - Pet: 8:00 - 17:00",
     "saturday": "Sub: 9:00 - 14:00",
     "followUs": "Pratite Nas",
@@ -311,6 +311,7 @@
   },
   "starflex": {
     "badge": "Premium Kolekcija Dušeka",
+    "mattressProducer": "Proizvođač Dušeka",
     "hero": {
       "subtitle": "Spavajte u Ultimativnoj Udobnosti",
       "description": "Doživite savršenu kombinaciju udobnosti, podrške i kvaliteta. Naši premium dušeci dizajnirani su da vam pruže najbolji san u vašem životu.",
